<?xml version="1.0"?>
<package format="2">
  <name>lanedetection</name>
  <version>0.0.0</version>
  <description>The lanedetection package</description>
  <maintainer email="adasone@todo.todo">adasone</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>parameter</build_depend>
  <build_depend>adasone_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>parameter</build_export_depend>
  <build_export_depend>adasone_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>parameter</exec_depend>
  <exec_depend>adasone_msgs</exec_depend>
  <export>
  </export>
</package>
